fixed host/basepath in swaggerBase.json. Fixed system post swagger def
