# docs/swagger.json
@@ -5,7 +5,8 @@
     "version": "1.0.0",
     "description": "rAsPI is meant to be a general purpose API that can be easily modified and added to for use with raspberry pi projects."
   },
-  "basePath": "localhost:3000",
+  "basePath": "/api",
+  "host": "localhost:3000",
   "schemes": [
     "http"
   ],
@@ -72,14 +73,20 @@
         "parameters": [
           {
             "name": "command",
-            "in": "query",
-            "description": "Command to execute on the system.",
-            "required": true,
-            "type": "string",
-            "enum": [
-              "Shutdown",
-              "Reboot"
-            ]
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": "string",
+                "description": "Command to execute on the system.",
+                "required": true,
+                "example": "Shutdown",
+                "enum": [
+                  "Shutdown",
+                  "Reboot"
+                ]
+              }
+            }
           }
         ],
         "responses": {
